tests/baselines/reference/typecheckIfCondition.errors.txt
==== tests/cases/compiler/typecheckIfCondition.ts (2 errors) ====
    // both uses of module should be an undefined symbol
    function myWrapper()
    {
        if (!module.exports) module.exports = "";
             ~~~~~~
!!! typecheckIfCondition.ts(4,10): error TS2095: Could not find symbol 'module'.
                             ~~~~~~
!!! typecheckIfCondition.ts(4,26): error TS2095: Could not find symbol 'module'.
        var x = null; // don't want to baseline output
    }
    